# nextwaves-sdk

./: .gitignore  README.md
driver/: README.md
python-reader/: reader.py
sdk/c#/APPForm/: APPForm.sln
sdk/c#/APPForm/APPForm/: Program.cs
sdk/c++/: main.cpp
sdk/c++/inc/reader/: MessageTran.h  ReaderMethod.h
sdk/c++/src/reader/: MessageTran.cpp
sdk/nation/: llms.txt
sdk/nation/cpp/: README.md  nrn.cpp  nrn.hpp
sdk/nation/go/: README.md  nrn.go
sdk/nation/python/: README.md  example.py  nrn.py
sdk/nation/rust/: Cargo.toml  README.md
sdk/nation/rust/src/: lib.rs
sdk/nation/webserial/: nrn-webserial.js  nrn-webserial.ts  tsconfig.json
sdk/python/: vmr64.py
sdk/vm64/c#/APPForm/APPForm/: Form1.Designer.cs  Form1.cs
sdk/vm64/c++/: CMakeLists.txt
sdk/vm64/c++/src/reader/: ReaderMethod.cpp
sdk/webserial/: README.md  VMR64Reader.tsx  index.html  vmr64.js
software/: JavaRFID.rar
software/Demo Software -English/: Record.docx
